--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lodash": "^3.10.1",
     "method-override": "^2.3.5",
     "webpack": "^1.11.0",
-    "when": "^3.7.3"
+    "when": "^3.7.3",
+    "phaser": "~2.4.2"
   },
   "devDependencies": {
     "async": "^1.4.0",
